# shroom-raider

./: .gitignore  Flamethrower.py  Player.py  README.md  README_ai.md  README_bonus.md  Stone.py  TEST.txt  main.py  misc_notes.py  pyproject.toml  requirements.txt  shroom_raider.bat  shroom_raider.py  style_guide.md
.github/workflows/: pytest.yml  ruff.yml
Bonus/: LevelManager.py  MainMenu.py  exit_codes.py  game.py  level_select.py  shroom_raider.py
Bonus/Bonus_Classes/: Leaderboard.py  PlayerData.py  __init__.py  security.py
Bonus/Classes/: Entity.py  Grid.py
Bonus/Levels/: levels_list.xlsx  levels_list__b.xlsx  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
Bonus/Statistics/: PlayerData.xlsx
Bonus/Utils/: Enums.py  animator.py  central_imports.py  exit_codes.py  general_utils.py  movement.py  sounds.py
Classes/: Axe.py  Entity.py  Flamethrower.py  Grid.py  Item.py  PavedTile.py  Player.py  Tree.py  Water.py
Classes/Entities/: Axe.py  Flamethrower.py  Mushroom.py  PavedTile.py  Player.py  Rock.py  Stone.py  Tree.py  Water.py  __init__.py  import_entities.py
Levels/: TEST.txt  test.txt  test0.txt  test1.txt  test10.txt  test1000.txt  test11.txt  test12.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
Logs/1/: input.txt  output.txt
Logs/10/: input.txt  output.txt
Logs/11/: input.txt  output.txt
Main/: Default.txt  TEST.txt  __init__.py  conf.py  index.rst  shroom_raider.py
Utils/: map_gen.py  map_gen_modular.py
main/: shroom_raider.py
(+326 files in other folders)
